import leaflet.css in gloab.css

--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -1,11 +1,13 @@
 ---
-
+import "leaflet/dist/leaflet.css";
 ---
 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Map + MDX</title>
+    <title>
+      digitales Museum des Geschichtsvereins Butzbach und Umgebung e.V.
+    </title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
