--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -1,5 +1,5 @@
 ---
-import "leaflet/dist/leaflet.css";
+
 ---
 
 <html lang="en">
@@ -8,12 +8,9 @@ import "leaflet/dist/leaflet.css";
     <title>
       digitales Museum des Geschichtsvereins Butzbach und Umgebung e.V.
     </title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""
-    />
+    <style is:global>
+      @import "../styles/global.css";
+    </style>
   </head>
   <body class="min-h-screen flex flex-col">
     <header class="my-4 mx-4">
